$Id: CHANGES,v 1.159 2002/01/31 10:25:55 stelian Exp $

Changes between versions 0.4b26 and 0.4b27 (released ???????????????)
=====================================================================

1.	Fixed behaviour of dump when exceeding resource limits
	(SIGXFSZ treatment).

2.	Added the -L flag to restore to allow the user to specify a 
	maximal allowed number of miscompares when using restore
	with the -C option to check the backup.

3.	Detailed the manual entry for the -N option of restore.

4.	Added the -a flag to restore to make able doing unattended
	restores in -i or -x mode (automatically walks through the
	multiple dump volumes).

5.	Extended the QFA mode to work with local files and/or
	remote tapes and files. This way, restore can know in advance
	the tape number and the offset for the inodes to extract and 
	can minimize the extraction time by seeking directly to the 
	good tape/offset.

6.	Added the -A <archive> option to both dump and restore, 
	which makes dump to archive a dump table-of-contents in
	the specified file to be used by restore to determine
	whether a file is in the dump file that is being restored.
	(the archive file syntax is also compatible with the
	Solaris ufsdump generated one).

7.	Small fix in restore making it able to read some (broken ?)
	Solaris ufsdump tapes.

Changes between versions 0.4b25 and 0.4b26 (released January 7, 2002)
=====================================================================

1.	Added a set of backup scripts from Eugenio Diaz
	<getnito@yahoo.com> in the examples section. It features
	automatic (cron based) full and incremental dumping of
	several filesystems on a separate filesystem.

2.	Fixed a off-by-one miscalculation which disabled dumping
	a one letter subdirectory. Thanks to Chris Siebenmann 
	<cks@utcc.utoronto.ca> for reporting the bug.

3.	Fixed several restore bugs occuring when trying to
	restore some missing files on the tape. Thanks to Chris