@@ -1,4 +1,4 @@
-$Id: CHANGES,v 1.159 2002/01/31 10:25:55 stelian Exp $
+$Id: CHANGES,v 1.160 2002/01/31 10:49:16 stelian Exp $
 
 Changes between versions 0.4b26 and 0.4b27 (released ???????????????)
 =====================================================================
@@ -31,6 +31,10 @@ Changes between versions 0.4b26 and 0.4b27 (released ???????????????)
 
 7.	Small fix in restore making it able to read some (broken ?)
 	Solaris ufsdump tapes.
+
+8.	Fixed dump to correctly recognise the root filesystem when using
+	ext2 disk labels (LABEL=/). Thanks to John Yu <jky@it.bu.edu>
+	for reporting this bug.
 
 Changes between versions 0.4b25 and 0.4b26 (released January 7, 2002)
 =====================================================================
